Add safe Compute Pool and signed To Bach ledger
